--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,6 +19,12 @@ jobs:
           node-version: "18"
       - name: Install dependencies
         run: npm install
+      - name: Install client dependencies
+        working-directory: client
+        run: npm install
+      - name: Install server dependencies
+        working-directory: server
+        run: npm install
       - name: Deploy to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
