--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "apollo-server-express": "^3.13.0",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
-    "mongoose": "^8.4.0"
-  },
-  "devDependencies": {
+    "mongoose": "^8.4.0",
     "concurrently": "^8.2.2"
   }
 }
