--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "apollo-server-express": "^3.13.0",
+    "concurrently": "^8.2.2",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "mongoose": "^8.4.0",
-    "concurrently": "^8.2.2"
+    "react-scripts": "^5.0.1"
   }
 }
