--- a/client/package.json
+++ b/client/package.json
@@ -23,5 +23,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@apollo/client": "^3.10.4",
+    "graphql": "^16.8.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1"
   }
 }
