--- a/package.json
+++ b/package.json
@@ -12,12 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.10.4",
-    "apollo-server-express": "^3.13.0",
-    "concurrently": "^8.2.2",
-    "express": "^4.19.2",
-    "graphql": "^16.8.1",
-    "mongoose": "^8.4.0",
-    "react-scripts": "^5.0.1"
+    "concurrently": "^8.2.2"
   }
 }
