--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm install && node src/server.js",
+    "server": "cd server && npm install && node src/app.js",
     "client": "cd client && npm install && npm start"
   },
   "keywords": [],
